syntax = "proto3";

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

package com.influxdata.platform.task.backend;
option go_package = "pb";

// StoredTaskInternalMeta is the internal state of a task.
// It is only intended to be used from implementations of Store.
message StoredTaskInternalMeta {
  int32 max_concurrency = 1;
  int64 last_completed_timestamp_unix = 2;
  message RunningList {
    int64 now_timestamp_unix = 1;
    uint32 try = 2;
    uint64 run_id = 3 [(gogoproto.customname) = "RunID"];
  }
  repeated RunningList currently_running = 3;
}
